# DRL_Crop_Field

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/maize_robot_bringup/share/maize_robot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/maize_robot_bringup/share/maize_robot_bringup/launch/: spawn_tracked_robot.launch.py  spawn_turtlebot_in_maize.launch.py
install/my_tracked_robot_description/share/my_tracked_robot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_tracked_robot_description/share/my_tracked_robot_description/launch/: robot_state_publisher.launch.py
install/virtual_maize_field/lib/virtual_maize_field/: generate_world
install/virtual_maize_field/share/virtual_maize_field/: package.sh
log/: latest_build
maize_robot_bringup/: package.xml  setup.cfg  setup.py
maize_robot_bringup/launch/: spawn_car_like.launch.py  spawn_tracked_robot.launch.py
my_robot_drl/: package.xml  setup.cfg  setup.py
my_robot_drl/launch/: train_maize_nav.launch.py
my_robot_drl/models/waypoint_box/: model.config  model.sdf
my_robot_drl/models/waypoint_sphere/: model.config
my_robot_drl/my_robot_drl/: dense_waypoint.py  drl_env.py  get_field_data.py  teleop_maize_env.py  train_agent.py  waypoint_visualizer.py
my_tracked_robot_description/: CMakeLists.txt
my_tracked_robot_description/launch/: robot_state_publisher.launch.py
my_tracked_robot_description/urdf/: car_robot.urdf.xacro  diff_bot.urdf.xacro  tracked_robot.urdf.xacro
(+1 files in other folders)
